# ai-study-2025-deploy

./: main.py  pyproject.toml
