[tool.poetry]
name = "ai-study-2025-deploy"
version = "0.1.1"
description = ""
authors = [""]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# 언어 및 자연어 처리 관련 패키지
langchain = "^0.3"
langchain-core = "^0.3"
langchain-experimental = "^0.3"
langchain-community = "^0.3"
langchain-openai = "^0.2"
langchain-text-splitters = "^0.3"
langchain-elasticsearch = "^0.3"
langchain-teddynote = "^0.3.37"
langgraph = "^0"
langsmith = "^0.1"
huggingface-hub = "^0.28.1"
openai = "^1.34"

chromadb = "^0.4.24"

pymupdf = "^1.24.1"
pdfplumber = "^0.11.1"

streamlit = "^1.32.2"
jupyter = "^1.0.0"
notebook = "^7.1.2"

torch = "^2.2.2"

python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
black = "^25.1.0"
gradio = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
